--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home Page</title>
 </head>
 <body>
-    <img src="IMG_9750.jpeg" width="500" height="500" alt="MyPhoto">
+    <img src="./image/IMG_9750.jpeg" width="500" height="500" alt="MyPhoto">
     <h1>Naod Zere</h1>
 
     <ul>
