--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Naod Zere</h1>
 
     <ul>
-        <li> <a href="HomePage.html">Lab1 - HomePage</a></li>
+        <li> <a href="index.html">Lab1 - HomePage</a></li>
         <li> <a href="">Lab2 - </a></li>
         <li> <a href="">Lab3 - </a></li>
         <li> <a href="">Lab4 - </a></li>
