--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <ul>
         <li> <a href="./index.html">Lab1 - HomePage</a></li>
-        <li> <a href="./Lab2/Aboutme/aboutme.html">Lab2 - Recipe </a></li>
-        <li> <a href="./Lab2/w1d2recipe/pie.html">Lab2 - Aboutme </a></li>
+        <li> <a href="./Lab2/w1d2recipe/pie.html">Lab2 - Recipe </a></li>
+        <li> <a href="./Lab2/Aboutme/aboutme.html">Lab2 - Aboutme </a></li>
         <li> <a href="">Lab4 - </a></li>
         <li> <a href="">Lab5 - </a></li>
         <li> <a href="">Lab6 - </a></li>
