--- a/Lab2/w1d2recipe/pie.html
+++ b/Lab2/w1d2recipe/pie.html
@@ -107,10 +107,12 @@
             All rights reserved
     </pre>
 
-    <a class="aa" href="https://validator.w3.org/check?uri=referer"> <img src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" 
+    <a class="aa" href="https://validator.w3.org/nu/?doc==https://samuelghirmay.github.io/CS-472-WAP/Assignment2/w1d2recipe/Pages/pie.html"> 
+        <img src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" 
         alt=""> </a>
 
-    <a class="bb" href="https://jigsaw.w3.org/css-validator/check/referer="><img src="https://mumstudents.org/cs472/2014-09/images/w3c-css.png" alt=""></a> 
+    <a class="bb" href="https://jigsaw.w3.org/css-validator/validator?uri=https://samuelghirmay.github.io/CS-472-WAP/Assignment2/w1d2recipe/Pages/pie.html">
+        <img src="https://mumstudents.org/cs472/2014-09/images/w3c-css.png" alt=""></a> 
 
   
   
