--- a/Lab2/Aboutme/aboutme.html
+++ b/Lab2/Aboutme/aboutme.html
@@ -24,35 +24,39 @@
     </ul>
 
     <h3 class="b">My Favorite Movies/Tv shows</h3>
-    <ol reversed>
-        <li>The Lord of The Rings </li><a href="https://www.imdb.com/title/tt0120737/"> (IMDB)</a>
+    <ol class="fav" reversed>
+        <span> <li>The Lord of The Rings <a href="https://www.imdb.com/title/tt0120737/"> (IMDB)</li></a>
+        </span>
         <ul>
-            <dt>Writer</dt>
-            <td>J.R.R.Tolkien</td>
-            <dt>Director</dt>
-            <td>Peter Jackson</td>
-            <dt>Genre</dt>
-            <td>High fantasy; Adventure</td>
-        </ul>
-        <li>Get Out</li> <a href="https://www.imdb.com/title/tt5052448/">(IMDB)</a>
-        <li>Prison Break</li><a href="https://www.imdb.com/title/tt0455275/">(IMDB)</a>
-        <li>Game Of Thrones</li> <a href="https://www.imdb.com/title/tt0944947/">(IMDB)</a>
+            <li>Writer:
+                 <ul><li>J.R.R.Tolkien</li></ul>
+             <li>Director:
+                <ul><li>Peter Jackson</li></ul>   
+            <li>Genre</li>
+                <ul><li>High fantasy; Adventure</li></ul>
+         </ul>
+        <li>Get Out <a  href="https://www.imdb.com/title/tt5052448/">(IMDB)</li></a>
+        <li>Prison Break<a  href="https://www.imdb.com/title/tt0455275/">(IMDB)</li></a>
+        <li>Game Of Thrones<a  href="https://www.imdb.com/title/tt0944947/">(IMDB)</li> </a>
     </ol>
 
     <h3 class="c">MY Moods</h3>
-    <dt class="happy">Happy</dt> <img src="/Lab2/images/happy.jpg" alt="">
-    <dt class="sad">Sad</dt><img src="/Lab2/images/sad.jpeg" alt="">
+    <dt class="happy">Happy</dt> <img class="ii" src="/Lab2/images/happy.jpg" alt="">
+    <dt class="sad">Sad</dt><img class="ii" src="/Lab2/images/sad.jpeg" alt="">
 
     <h3>Fun Facts About My Neighbors</h3>
     <ul>
         <li>My friend is like my family </li>
     </ul>
 
-    <div>
+    <div class="di">
 
-    <a class="happy" href=""><img src="/Lab1/image/images/w3c-html5-logo.png" alt="Html"></a>
+    <a  href="https://validator.w3.org/nu/?doc==https://samuelghirmay.github.io/CS-472-WAP/Assignment2/w1d2recipe/Pages/pie.html"> 
+        <img class="im" src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" 
+        alt=""> </a>
 
-    <a class="sad" href=""><img src="/Lab2/images/vcss.gif" alt="css"></a>
+    <a  href="https://jigsaw.w3.org/css-validator/validator?uri=https://samuelghirmay.github.io/CS-472-WAP/Assignment2/w1d2recipe/Pages/pie.html">
+        <img class="im" src="https://mumstudents.org/cs472/2014-09/images/w3c-css.png" alt=""></a> 
 </div>
 
 
