--- a/Lab2/Aboutme/aboutme.html
+++ b/Lab2/Aboutme/aboutme.html
@@ -51,7 +51,7 @@
 
     <div class="di">
 
-    <a  href="https://validator.w3.org/nu/?doc==https://samuelghirmay.github.io/CS-472-WAP/Assignment2/w1d2recipe/Pages/pie.html"> 
+    <a  href="https://validator.w3.org/nu/?doc=https://samuelghirmay.github.io/CS-472-WAP/Assignment2/w1d2recipe/Pages/pie.html"> 
         <img class="im" src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" 
         alt=""> </a>
 
