--- a/Lab2/w1d2recipe/pie.html
+++ b/Lab2/w1d2recipe/pie.html
@@ -107,7 +107,7 @@
             All rights reserved
     </pre>
 
-    <a class="aa" href="https://validator.w3.org/nu/?doc==https://samuelghirmay.github.io/CS-472-WAP/Assignment2/w1d2recipe/Pages/pie.html"> 
+    <a class="aa" href="https://validator.w3.org/nu/?doc=https://samuelghirmay.github.io/CS-472-WAP/Assignment2/w1d2recipe/Pages/pie.html"> 
         <img src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" 
         alt=""> </a>
 
