--- a/Lab2/Aboutme/aboutme.html
+++ b/Lab2/Aboutme/aboutme.html
@@ -51,11 +51,11 @@
 
     <div class="di">
 
-    <a  href="https://validator.w3.org/nu/?doc=https://samuelghirmay.github.io/CS-472-WAP/Assignment2/w1d2recipe/Pages/pie.html"> 
+    <a  href="https://validator.w3.org/nu/?doc=https://naodzere.github.io/Naod-Zere-Wap/l"> 
         <img class="im" src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" 
         alt=""> </a>
 
-    <a  href="https://jigsaw.w3.org/css-validator/validator?uri=https://samuelghirmay.github.io/CS-472-WAP/Assignment2/w1d2recipe/Pages/pie.html">
+    <a  href="https://jigsaw.w3.org/css-validator/validator?uri=https://naodzere.github.io/Naod-Zere-Wap/">
         <img class="im" src="https://mumstudents.org/cs472/2014-09/images/w3c-css.png" alt=""></a> 
 </div>
 
