--- a/Lab2/Aboutme/aboutme.html
+++ b/Lab2/Aboutme/aboutme.html
@@ -51,7 +51,7 @@
 
     <div class="di">
 
-    <a  href="https://validator.w3.org/nu/?doc=https://naodzere.github.io/Naod-Zere-Wap/l"> 
+    <a  href="https://validator.w3.org/nu/?doc=https://naodzere.github.io/Naod-Zere-Wap/"> 
         <img class="im" src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" 
         alt=""> </a>
 
