--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li> <a href="./index.html">Lab1 - HomePage</a></li>
         <li> <a href="./Lab2/w1d2recipe/pie.html">Lab2 - Recipe </a></li>
         <li> <a href="./Lab2/Aboutme/aboutme.html">Lab2 - Aboutme </a></li>
-        <li> <a href="">Lab4 - </a></li>
+        <li> <a href="./Lab3/index.html">Lab4 - Login </a></li>
         <li> <a href="">Lab5 - </a></li>
         <li> <a href="">Lab6 - </a></li>
         <li> <a href="">Lab7 - </a></li>
