--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -67,11 +67,11 @@
                 new ticket</a> to begin.</p>
                 <button id = "button2">Submit ticket</button><br><br>
                 <a
-                href="https://validator.w3.org/nu/?doc=https://naodzere.github.io/Naod-Zere-Wap/">
+                href="https://validator.w3.org/nu/?doc=https://naodzere.github.io/Naod-Zere-Wap/Lab3/index.html">
                 <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt=""> </a>
         
             <a
-                href="https://jigsaw.w3.org/css-validator/validator?uri=https://naodzere.github.io/Naod-Zere-Wap/"><img
+                href="https://jigsaw.w3.org/css-validator/validator?uri=https://naodzere.github.io/Naod-Zere-Wap/Lab3/index.html"><img
                     src="http://mumstudents.org/cs472/2014-09/images/w3c-css.png" alt=""></a>
         </div>
     </div>
