--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </ul>
     <footer>
        
-            <a href="https://validator.w3.org/nu/?doc=https://naodzere.github.io/Naod-Zere-Wap/"><img 
+            <a href="https://validator.w3.org/nu/?doc=https://naodzere.github.io/Naod-Zere-Wap/index.html"><img 
                 src="./Lab1/images/w3c-html5-logo.png" alt="html w3"></a>
           
 
