--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -43,7 +43,7 @@
                 <h3>Login</h3>
 
                 <p id="l">Login to know the status of the ticket</p>
-                <button class="button button1"> <img src="./images/Azure login.png" alt="azure" width="200"
+                <button class="button button1"> <img src="./images/AzureLogin.png" alt="azure" width="200"
                         height="50"></button><br>
                 <p id="l2">or login sing</p>
                 <p id="u">Username or Email</p>
