--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - CS</title>
-    <link rel="stylesheet" href="../Lab3/Css/helper.css">
     <link rel="shortcut icon" href="../Lab3/Css/style.css" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./Css/helper.css">
 
 
 
@@ -47,9 +46,9 @@
                         height="50"></button><br>
                 <p id="l2">or login sing</p>
                 <p id="u">Username or Email</p>
-                <input type="text" class="textfield">
+                <input type="text" placeholder="Enter email" class="textfield">
                 <p id="p">Password</p>
-                <input type="text" class="textfield"><br>
+                <input type="text" placeholder="Enter password" class="textfield"><br>
                 <span id = "check">
                     <input type="checkbox"> Remember me
                 </span>
@@ -66,7 +65,7 @@
                 created a ticket yet then you would need to <a class="blue" href="">register</a>  or <a class  = "blue" href="">create a
                 new ticket</a> to begin.</p>
                 <button id = "button2">Submit ticket</button><br><br>
-                <a
+                <a class="ii"
                 href="https://validator.w3.org/nu/?doc=https://naodzere.github.io/Naod-Zere-Wap/">
                 <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt=""> </a>
         
