--- a/Lab4/webPage2/index.html
+++ b/Lab4/webPage2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width, initial-scale=1.0">
     <title>Webform1.PNG</title>
-    <link rel="stylesheet" href="./webpage2.css">
+    <link rel="stylesheet" href="../webPage2/Css/webpage2.css">
 </head>
 <body>
    
