--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <li> <a href="./Lab2/w1d2recipe/pie.html">Lab2 - Recipe </a></li>
         <li> <a href="./Lab2/Aboutme/aboutme.html">Lab2 - Aboutme </a></li>
         <li> <a href="./Lab3/index.html">Lab3 - Login </a></li>
-        <li> <a href="./Lab4/webpage1.html">Lab4 - webpage1</a></li>
-        <li> <a href="./Lab4/webpage2.html">Lab4 - webpage2</a></li>
+        <li> <a href="./Lab4/webPage1/index.html">Lab4 - webpage1</a></li>
+        <li> <a href="./Lab4/webPage2/index.html">Lab4 - webpage2</a></li>
         <li> <a href="">Lab6 - </a></li>
         <li> <a href="">Lab7 - </a></li>
         <li> <a href="">Lab8 - </a></li>
