--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <ul>
-        <li><a href="../Lab4/webPage1/index.html"></a></li>
-        <li><a href="../Lab4/webPage2/index.html"></a></li>
+        <li><a href="../Lab4/webPage1/index.html">Lab4-webPage1</a></li>
+        <li><a href="../Lab4/webPage2/index.html">Lab4-webPage2</a></li>
     </ul>
 </body>
 </html>
