--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 
     <ul>
         <li> <a href="./index.html">Lab1 - HomePage</a></li>
-        <li> <a href="./Lab2/w1d2recipe/pie.html">Lab2 - Recipe </a></li>
-        <li> <a href="./Lab2/Aboutme/aboutme.html">Lab2 - Aboutme </a></li>
+        <li> <a href="./Lab2/index.html">Lab2 </a></li>
         <li> <a href="./Lab3/index.html">Lab3 - Login </a></li>
         <li> <a href="./Lab4/index.html">Lab4 - webPage</a></li>
-        <li> <a href="">Lab5 - webpage2</a></li>
+        <li> <a href="">Lab5 - </a></li>
         <li> <a href="">Lab6 - </a></li>
         <li> <a href="">Lab7 - </a></li>
         <li> <a href="">Lab8 - </a></li>
