--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <ul>
         <li> <a href="./index.html">Lab1 - HomePage</a></li>
-        <li> <a href="./Lab2/index.html">Lab2 </a></li>
+        <li> <a href="./Lab2/index.html">Lab2 - Aboutme And Recipe </a></li>
         <li> <a href="./Lab3/index.html">Lab3 - Login </a></li>
         <li> <a href="./Lab4/index.html">Lab4 - webPage</a></li>
         <li> <a href="">Lab5 - </a></li>
