--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -10,7 +10,7 @@
 
     <ul>
         <li><a href="./Aboutme/aboutme.html">Lab2-Aboutme</a></li>
-        <li><a href="./w1d2recipe/pie.html"></a>Lab2-Recipe</li>
+        <li><a href="./w1d2recipe/pie.html">Lab2-Recipe</a></li>
     </ul>
     
 </body>
