--- a/Lab4/webPage2/index.html
+++ b/Lab4/webPage2/index.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width, initial-scale=1.0">
     <title>Webform1.PNG</title>
     <link rel="stylesheet" href="../webPage2/Css/webpage2.css">
+    <script src="./js/login.js" type="text/js"></script>
 </head>
 <body>
    
-    <form action="#" autocomplete="on">
+    <form id="form" action="#"  autocomplete="on" >
         <label for="email">Email address</label>
-        <input type="email" placeholder="Enter email">
+        <input required id="email" type="email" placeholder="Enter email">
         <p>We'll never share your email with anyone else.</p>
         <label for="password">Password</label>
-        <input type="password" placeholder="Password" pattern="(?=.\d)(?=.[a-z])(?=.*[A-Z]).{10,}$">
-        <label for="text">URL</label>
-        <input type="text" placeholder="Input URL" pattern="^http[s]?:\/\/.+">
-        <label id="checkbox"><input type="checkbox">Check me out</label>
-        <input type="submit"></input>
+        <input required id="password" type="password" placeholder="Password" pattern="(?=.\d)(?=.[a-z])(?=.*[A-Z]).{10,}">
+        <!-- <label for="text"> URL</label>
+        <input required id="url" type="text" placeholder="Input URL" pattern="^http[s]?:\/\/.+">
+        <label id="checkbox"><input type="checkbox">Check me out</label> -->
+        <input required id="submit" type="submit" value="Login"></input>
     </form>
-
+ 
     
    
     
