--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li> <a href="">Lab7 - </a></li>
         <li> <a href="">Lab8 - </a></li>
         <li> <a href="">Lab9 - </a></li>
+        <li> <a href="">Lab10 - </a></li>
 
     </ul>
     <footer>
