--- a/Lab5/pages/Login.html
+++ b/Lab5/pages/Login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../Css/login.css">
     <script defer src="../js/login.js" type="text/javascript"></script>
     <title>Login 1</title>
 </head>
@@ -21,9 +21,15 @@
             pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10,}">
 
         <input type="submit" id="submit" value="Login"> 
-    </form>
 
-    <div id="output"></div>
+        <!-- <div>
+            <h5>OutPut</h5>
+            <div id="output">
+               
+            </div>
+        </div> -->
+    </form>
+    
 
 </body>
 
