--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li> <a href="./Lab2/index.html">Lab2 - Aboutme And Recipe </a></li>
         <li> <a href="./Lab3/index.html">Lab3 - Login </a></li>
         <li> <a href="./Lab4/index.html">Lab4 - webPage</a></li>
-        <li> <a href="">Lab5 - </a></li>
+        <li> <a href="./Lab5/lab5.html">Lab5 - AllInside</a></li>
         <li> <a href="">Lab6 - </a></li>
         <li> <a href="">Lab7 - </a></li>
         <li> <a href="">Lab8 - </a></li>
