--- a/Lab5/lab5.html
+++ b/Lab5/lab5.html
@@ -9,9 +9,9 @@
 <body>
 
   <ul>
-    <li><a href="./pages/Login1.html">Lab5 - Login</a></li>
+    <li><a href="./pages/Login.html">Lab5 - Login</a></li>
     <li><a href="./pages/problems.html">Lab5 - Problems</a></li>
-    <li><a href="./pages/Product.html">Lab5 - Product</a></li>
+    <li><a href="./pages/produ.html">Lab5 - Product</a></li>
     <li><a href="./pages/timer.html">Lab5 - Timer</a></li>
 
   </ul>
