--- a/Lab9/index.html
+++ b/Lab9/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/lab8.js"></script>
+    <script src="./js/inheritance.js">inheritance.js</script>
     <title>Document</title>
 </head>
 <body>
-    <h4>hello lab8</h4>
+    <h4>inheritance</h4>
 </body>
 </html>
