--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
         <li> <a href="./Lab3/index.html">Lab3 - Login </a></li>
         <li> <a href="./Lab4/index.html">Lab4 - webPage</a></li>
         <li> <a href="./Lab5/lab5.html">Lab5 - AllInside</a></li>
-        <li> <a href="">Lab6 - </a></li>
-        <li> <a href="">Lab7 - </a></li>
-        <li> <a href="">Lab8 - </a></li>
+        <li> <a href="./Lab8/js/lab8.js">Lab8 - Closure and Module Pattern</a></li>
         <li> <a href="">Lab9 - </a></li>
         <li> <a href="">Lab10 - </a></li>
+        <li> <a href="">Lab11- </a></li>
 
     </ul>
     <footer>
