--- a/Lab5/lab5.html
+++ b/Lab5/lab5.html
@@ -10,7 +10,7 @@
 
   <ul>
     <li><a href="./pages/Login.html">Lab5 - Login</a></li>
-    <li><a href="./pages/problems.html">Lab5 - Problems</a></li>
+    <li><a href="./js/problems.js">Lab5 - Problems</a></li>
     <li><a href="./pages/produ.html">Lab5 - Product</a></li>
     <li><a href="./pages/timer.html">Lab5 - Timer</a></li>
 
