--- a/Lab10/index.html
+++ b/Lab10/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <h4>lab-10- classes</h4>
+
+    <ul>
+        <li><a href="./webapp/js/main.js">main.js</a></li>
+        <li><a href="./webapp/module/Employee.js">main.js</a></li>
+        <li><a href="./webapp/module/Person.js">main.js</a></li>
+
+        
+    </ul>
     
 </body>
 </html>
