--- a/Lab10/index.html
+++ b/Lab10/index.html
@@ -12,8 +12,8 @@
 
     <ul>
         <li><a href="./webapp/js/main.js">main.js</a></li>
-        <li><a href="./webapp/module/Employee.js">main.js</a></li>
-        <li><a href="./webapp/module/Person.js">main.js</a></li>
+        <li><a href="./webapp/module/Employee.js">Employee.js</a></li>
+        <li><a href="./webapp/module/Person.js">Person.js</a></li>
 
         
     </ul>
