--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li> <a href="./Lab8/js/lab8.js">Lab8 - Closure and Module Pattern</a></li>
         <li> <a href="./Lab9/js/inheritance.js">Lab9 - Inheritance</a></li>
         <li> <a href="./Lab10/index.html">Lab10 - Classes</a></li>
-        <li> <a href="">Lab11- </a></li>
+        <li> <a href="./Lab11/hcmc-website/index.html">Lab11- Patients Registration</a></li>
 
     </ul>
     <footer>
